--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,9 @@ version: '2'
 
 services:
   nats:
-    image: bitnami/nats:latest
+    image: nats:latest
+    command: -js
     ports:
       - 4222:4222
       - 6222:6222
       - 8222:8222
-    environment:
-      - NATS=10s
